# jsonlib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  jsonlib.lua
include/jsonlib/: json.h
src/: json.c
test/: json_basic.c  json_basic_array_incomplete.c  json_basic_array_string.c  json_basic_boolean_false.c  json_basic_boolean_true.c  json_basic_float.c  json_basic_float_array.c  json_basic_incomplete.c  json_basic_int.c  json_basic_int_array.c  json_basic_negative_int.c  json_basic_null.c  json_basic_object.c  json_basic_object_array.c  json_basic_string.c  json_basic_string_array.c  json_test_allocator.h
test/integration/: json_basic.c  json_basic_array_incomplete.c  json_basic_array_string.c  json_basic_boolean_false.c  json_basic_boolean_true.c  json_basic_float.c  json_basic_float_array.c  json_basic_incomplete.c  json_basic_int.c  json_basic_int_array.c  json_basic_negative_int.c  json_basic_null.c  json_basic_object.c  json_basic_object_array.c  json_basic_string.c  json_basic_string_array.c
test/unit/: jsonlib_allocatedecimal.c  jsonlib_allocateinteger.c  jsonlib_allocatejson.c
