cmake_minimum_required(VERSION 3.10)
project(jsonlib C)

set(CMAKE_C_STANDARD 11)
option(BUILD_TESTS "Build test programs" OFF)
option(OSLIB_HEADER "Use oslib platform header" OFF)

include_directories(.)

add_library(jsonlib STATIC src/json.c)

set_target_properties(jsonlib PROPERTIES PREFIX "")

if (BUILD_TESTS)
	enable_testing()
	file(GLOB_RECURSE TESTFILES "test/*.c")
	foreach(TESTFILE ${TESTFILES})
		get_filename_component(TESTFILE_STRIPPED ${TESTFILE} NAME_WE)
		add_executable(${TESTFILE_STRIPPED} ${TESTFILE})
		target_link_libraries(${TESTFILE_STRIPPED} jsonlib)
		add_test(NAME ${TESTFILE_STRIPPED} WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMAND ${TESTFILE_STRIPPED}) 
	endforeach()
endif()
if (OSLIB_HEADER)
	if (DEFINED OSLIB_DIR)
		include_directories(${OSLIB_DIR})
		add_definitions(-DOSLIB)
	else()
		message(SEND_ERROR "Specify OSLIB include directory in entry OSLIB_DIR!")
	endif()
endif()